- Made some updates to the way in which the terminal reset is handled at the end of a transaction
- Updated the Descriptors file in LUFA to avoid errors from newer compilers.
- Modified the InitSCDTransaction method to allow a more robust check of the terminal reset line.
- Added functionality to act as a card and reply to a Terminal from a host connected via USB.

******************************************
CHANGES from 2.4.0:
******************************************
- Fixed bug that made not possible the update of the software with version 4 of
  the SCD sold by Smart Architects (release 2012). There was an incomplete
  handling of the inverted card detector.
- Fixed problems that required the SCD to be restarted between recording logs
  and acquiring traces using the Python tools. Now you can use the Python tool
  to start recording logs (i.e. running the Forward Data application) and then
  immediately retrieving them without having to restart the SCD.
- Removed Serial Iface and Forward LogAC applications from menu as they are
  either incomplete or buggy and not generally useful.
- Changed default card inserted switch flag in Makefile for SCD v4. Recompile
  the code with the Makefile line commented for previous versions or use
  the *prev4.hex files provided in the tgz file.

******************************************
CHANGES from 2.3.4:
******************************************
- Introduced a millisecond counter that can be used to trace events.
- Rewritten the logging mechanism completely. Now every byte sent or received by
  either the card or the terminal can be logged independently, including the
  bytes in the ATR. Also the counter is used to put timestamps into the log.
  The limitation of the current hardware is the 8KB available of EEPROM which
  effectively limits the logging capability to just a few full traces.
  See the file scd_logger.h for the memory allocation. Change this with care,