@@ -8,7 +8,7 @@ http://www.opensource.org/licenses/bsd-license.php
 
 VERSION
 Current version of the software is 2.5.0.
-Last updated: February 2013.
+Last updated: August 2013.
 
 SCD SOFTWARE
 
